--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -10,7 +10,7 @@
     android:layout_marginStart="16dp">
 
     <ImageView
-        android:id="@+id/photo_image_view"
+        android:id="@+id/news_image_view"
         android:layout_width="75dp"
         android:layout_height="50dp"
         android:scaleType="centerCrop"
@@ -25,7 +25,7 @@
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/new_title"
+            android:id="@+id/news_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
